--- a/FRONTEND/src/Components/HomeHeader/HomeHeader.css
+++ b/FRONTEND/src/Components/HomeHeader/HomeHeader.css
@@ -1,11 +1,11 @@
 /* ---------- Sticky Header and Styling ---------- */
 .header {
   position: sticky;
-  z-index: 1000; /* Increased the z-index to ensure it's on top of other elements */
+  z-index: 1000; 
   top: 0;
   width: 100%;
-  background-color: #ffffff; /* Optional: to give a solid background color to the header */
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Optional: add a subtle shadow to the header */
+  background-color: #ffffff; 
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
 }
 
 /* ---------- Header Upper Section ---------- */
@@ -32,7 +32,7 @@
 }
 
 .call-us a:hover {
-  color: #00b4d8; /* Light blue on hover */
+  color: #00b4d8; 
 }
 
 .links {
