--- a/FRONTEND/src/Components/Footer/Footer.css
+++ b/FRONTEND/src/Components/Footer/Footer.css
@@ -1,10 +1,12 @@
 .footer {
-  width: 100%;
-  position: fixed;
-  bottom: 0;
-  padding: 0;
-  background-color: rgb(9, 100, 94);
+  background-color: red;
+  /* width: 100%; */
+  /* position: fixed; */
+  /* bottom: 0; */
+  /* padding: 0; */
+  /* background-color: rgb(9, 100, 94); */
   color: aliceblue;
+  color: black;
   font-size: 1rem;
   display: flex;
   justify-content: space-around;
@@ -17,9 +19,9 @@
 .footer p {
   font-size: clamp(0.7rem, 2vw, 1rem);
 }
-.footer a{
+.footer a {
   color: rgba(245, 245, 245, 0.794);
-
+  color: black;
 }
 .footer p a:hover {
   color: whitesmoke;
