--- a/FRONTEND/src/Pages/WelcomePage/HeroPage.css
+++ b/FRONTEND/src/Pages/WelcomePage/HeroPage.css
@@ -2,13 +2,14 @@
 
 .welcome-hero {
   width: 100%;
+  flex: 1;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   padding: 2rem;
-  background: linear-gradient(to bottom, #f0f8ff, #dff6ff);
-  overflow: visible; 
+  /* background: linear-gradient(to bottom, #f0f8ff, #dff6ff); */
+  /* overflow: visible;  */
   font-family: 'Poppins', sans-serif; 
 }
 
@@ -82,9 +83,9 @@
 }
 
 .left-hero img {
-  max-width: 105%; 
+  width: 100%; 
   height: auto;
-  max-height: 80vh;
+  height: 60vh;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   animation: fadeIn 1.5s ease-in-out;
