--- a/FRONTEND/src/Pages/SignupPage/signup.css
+++ b/FRONTEND/src/Pages/SignupPage/signup.css
@@ -29,10 +29,12 @@ h2 {
 
 .signup-form input {
   width: 100%;
+  height: 2px;
   padding: 8px;
   margin-bottom: 15px;
   border: 2px solid purple;
   border-radius: 5px;
+  font-size:small;
 }
 
 .signup-button {
@@ -63,4 +65,35 @@ h2 {
 .login-link {
   margin-top: 20px;
   color: blue;
+}
+
+.input-group {
+  display: flex;
+  align-content: safe;
+  border: 1px solid #ccc;
+  padding: 8px;
+  border-radius: 7px;
+  margin-bottom: 30px;
+  min-width: 6px;
+  height: 50px;
+  
+}
+
+.input-group .icon {
+  margin-right: 6px;
+  color: #4d4c4c;
+  margin-bottom: 0px;
+  margin-top: 10px
+  ;
+  
+  
+}
+
+.input-group input {
+  border: none;
+  outline: none;
+  flex: 1;
+  margin-bottom: 15px;
+  margin-top: 3px;
+  height: 30px;
 }
