--- a/FRONTEND/src/Components/HomeHeader/HomeHeader.css
+++ b/FRONTEND/src/Components/HomeHeader/HomeHeader.css
@@ -1,4 +1,4 @@
-/* ---------- Sticky Header and Styling ---------- */
+/* ------------HEADER-------------- */
 .header {
   position: sticky;
   z-index: 1000; 
@@ -8,7 +8,6 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
 }
 
-/* ---------- Header Upper Section ---------- */
 .header .upper {
   padding: 0 8px;
   background-color: rgba(128, 128, 128, 0.628);
@@ -32,7 +31,7 @@
 }
 
 .call-us a:hover {
-  color: #00b4d8; 
+  color: #12be46; 
 }
 
 .links {
@@ -97,7 +96,8 @@
 
 .page-links a:hover {
   border-bottom: 2px solid whitesmoke;
-  color: #00b4d8; /* Light blue hover effect */
+  color: #00b4d8; 
+  
 }
 
 @media (max-width: 542px) {
@@ -106,7 +106,6 @@
   }
 }
 
-/* ---------- Auth Buttons Styling ---------- */
 .btns {
   display: flex;
   gap: 8px;
@@ -116,14 +115,14 @@
   padding: 3px 5px;
   border-radius: 5px;
   border: none;
-  background-color: lightcyan;
+  background-color: rgb(7, 78, 78);
   font-weight: bold;
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
 }
 
 .btns .login:hover {
-  background-color: #00b4d8; /* Light blue on hover */
+  background-color: #00b4d8; 
 }
 
 .btns .signup {
@@ -138,5 +137,6 @@
 }
 
 .btns .signup:hover {
-  background-color: #d83a3a; /* Darker red on hover */
+  background-color: #d83a3a; 
+
 }
