--- a/FRONTEND/src/Components/HomeHeader/HomeHeader.css
+++ b/FRONTEND/src/Components/HomeHeader/HomeHeader.css
@@ -1,5 +1,8 @@
 /* ------------HEADER-------------- */
 .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   position: sticky;
   z-index: 1000; 
   top: 0;
@@ -7,52 +10,12 @@
   background-color: #ffffff; 
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
 }
-
-.header .upper {
-  padding: 0 8px;
-  background-color: rgba(128, 128, 128, 0.628);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.call-us {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: clamp(0.7rem, 1vw, 0.8rem);
-}
-
-.call-us a {
-  color: black;
-  text-decoration: none;
-  font-weight: bold;
-  transition: color 0.3s ease-in-out;
-}
-
-.call-us a:hover {
-  color: #12be46; 
-}
-
-.links {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: clamp(0.7rem, 2vw, 1.2rem);
-}
-
-.links p {
-  font-size: clamp(0.7rem, 1vw, 0.8rem);
-}
-
-.link a {
-  margin: 3px;
-}
-
 /* ---------- Header Lower Section ---------- */
 .header .lower {
+  padding: 10px;
+  width: 100%;
   padding: 0 8px;
-  background-color: rgba(9, 70, 42, 0.74);
+  background-color: #497661;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -71,6 +34,7 @@
 }
 
 .logo h2 {
+  color: black;
   font-size: clamp(0.7rem, 2vw, 1rem);
 }
 
