some edits on the signup form

--- a/FRONTEND/src/Pages/SignupPage/signup.css
+++ b/FRONTEND/src/Pages/SignupPage/signup.css
@@ -21,6 +21,7 @@ h2 {
   font-size: 16px;
 }
 
+
 .signup-form label {
   display: flex;
   font-size: 14px;
@@ -96,4 +97,5 @@ h2 {
   margin-bottom: 15px;
   margin-top: 3px;
   height: 30px;
+  color: rgb(83, 51, 8);
 }
