--- a/FRONTEND/src/Components/styles/header.css
+++ b/FRONTEND/src/Components/styles/header.css
@@ -30,7 +30,7 @@
 }
 .logo h1 {
   color: black;
-  font-size: 1.5rem;
+  font-size: clamp(0.7rem, 2vw,1.5rem);
   font-weight: 700;
   /* color: var(--text-primary); */
 }
