--- a/FRONTEND/src/Components/HomeHeader/HomeHeader.css
+++ b/FRONTEND/src/Components/HomeHeader/HomeHeader.css
@@ -1,5 +1,8 @@
-/* ---------- Sticky Header and Styling ---------- */
+/* ------------HEADER-------------- */
 .header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   position: sticky;
   z-index: 1000; 
   top: 0;
@@ -7,53 +10,12 @@
   background-color: #ffffff; 
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); 
 }
-
-/* ---------- Header Upper Section ---------- */
-.header .upper {
-  padding: 0 8px;
-  background-color: rgba(128, 128, 128, 0.628);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.call-us {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: clamp(0.7rem, 1vw, 0.8rem);
-}
-
-.call-us a {
-  color: black;
-  text-decoration: none;
-  font-weight: bold;
-  transition: color 0.3s ease-in-out;
-}
-
-.call-us a:hover {
-  color: #12be46; 
-}
-
-.links {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: clamp(0.7rem, 2vw, 1.2rem);
-}
-
-.links p {
-  font-size: clamp(0.7rem, 1vw, 0.8rem);
-}
-
-.link a {
-  margin: 3px;
-}
-
 /* ---------- Header Lower Section ---------- */
 .header .lower {
+  padding: 10px;
+  width: 100%;
   padding: 0 8px;
-  background-color: rgba(9, 70, 42, 0.74);
+  background-color: #497661;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -72,6 +34,7 @@
 }
 
 .logo h2 {
+  color: black;
   font-size: clamp(0.7rem, 2vw, 1rem);
 }
 
@@ -96,8 +59,9 @@
 }
 
 .page-links a:hover {
-  border-bottom: 2px solid rgb(12, 6, 6);
-  color: #00b4d8; /* Light blue hover effect */
+  border-bottom: 2px solid whitesmoke;
+  color: #00b4d8; 
+  
 }
 
 @media (max-width: 542px) {
@@ -106,7 +70,6 @@
   }
 }
 
-/* ---------- Auth Buttons Styling ---------- */
 .btns {
   display: flex;
   gap: 8px;
@@ -123,7 +86,7 @@
 }
 
 .btns .login:hover {
-  background-color: #00b4d8; /* Light blue on hover */
+  background-color: #00b4d8; 
 }
 
 .btns .signup {
@@ -138,5 +101,6 @@
 }
 
 .btns .signup:hover {
-  background-color: #926709; /* Darker red on hover */
+  background-color: #d83a3a; 
+
 }
