--- a/FRONTEND/src/Pages/LoginPage/login.css
+++ b/FRONTEND/src/Pages/LoginPage/login.css
@@ -7,10 +7,10 @@
   max-width: 400px;
   margin-left: auto;
   margin-right: auto;
-  width: 380px; 
-  max-height: 900px; 
+  max-width: 480px;
+  max-height: 900px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  background-color: #d3d6dd; 
+  background-color: #d3d6dd;
 }
 
 h1 {
@@ -24,7 +24,9 @@ h2 {
   margin-bottom: 20px;
   font-size: 16px;
 }
-
+.login-form {
+  width: 90%;
+}
 .login-form label {
   display: flex;
   margin: 10px 0 5px;
@@ -33,13 +35,12 @@ h2 {
 }
 
 .login-form input {
-  width: 120%;
+  width: 90%;
   padding: 12px;
   margin-bottom: 15px;
   border: none;
   border-radius: 4px;
   font-size: 1rem;
-
 }
 
 .login-form input:focus {
@@ -104,11 +105,11 @@ h2 {
   display: flex;
   align-items: center;
   margin-bottom: 15px;
-  justify-content: flex-start; 
+  justify-content: flex-start;
 }
 
 .login-container .remember-me input {
-  margin-right: 0%; 
+  margin-right: 0%;
 }
 
 .login-container .remember-me label {
@@ -183,5 +184,4 @@ h2 {
   .login-container button {
     padding: 10px;
   }
-
 }
