--- a/FRONTEND/src/Pages/SignupPage/signup.css
+++ b/FRONTEND/src/Pages/SignupPage/signup.css
@@ -21,6 +21,9 @@ h2 {
   font-size: 16px;
 }
 
+.signup-form {
+  width: 90%;
+}
 
 .signup-form label {
   display: flex;
@@ -35,7 +38,7 @@ h2 {
   margin-bottom: 15px;
   border: 2px solid purple;
   border-radius: 5px;
-  font-size:small;
+  font-size: small;
 }
 
 .signup-button {
@@ -50,7 +53,8 @@ h2 {
   color: white;
   cursor: pointer;
 }
-.signup-button-loading{
+
+.signup-button-loading {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -77,17 +81,13 @@ h2 {
   margin-bottom: 30px;
   min-width: 6px;
   height: 50px;
-  
 }
 
 .input-group .icon {
   margin-right: 6px;
   color: #4d4c4c;
   margin-bottom: 0px;
-  margin-top: 10px
-  ;
-  
-  
+  margin-top: 10px;
 }
 
 .input-group input {
