--- a/FRONTEND/src/Pages/StudentDashboard/student-dashboard.css
+++ b/FRONTEND/src/Pages/StudentDashboard/student-dashboard.css
@@ -1,3 +1,22 @@
+.dashboard-layout {
+  display: flex;
+  height: 100vh;
+}
+
+.sidebar {
+  width: 250px;
+  background-color: #fbfbfc;
+  color: white;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.dashboard-main-content {
+  flex-grow: 1;
+  padding: 20px;
+}
+
 .student-dashboard {
   display: flex;
   flex-direction: column;
