--- a/FRONTEND/src/Components/styles/create-issue.css
+++ b/FRONTEND/src/Components/styles/create-issue.css
@@ -135,20 +135,8 @@
 
 .user-info p {
   margin: 5px 0;
-}
-
-.user-info p strong {
-  font-size: 0.9rem;
-  font-weight: 500;
-  color: black;
-  text-transform: uppercase;
-}
-
-.user-info p span {
-  font-size: 1.4rem;
-  font-weight: 700;
-  color: black;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: var(--text-primary);
 }
 
