--- a/FRONTEND/src/Components/styles/create-issue.css
+++ b/FRONTEND/src/Components/styles/create-issue.css
@@ -9,6 +9,14 @@
   overflow-y: auto;
   border: 1px solid var(--border-color);
 }
+
+.modal-header{
+  display: flex;
+
+}
+.close-modal-button{
+  width: auto;
+}
 .form-group {
   margin-bottom: 20px;
 }
