--- a/FRONTEND/src/Pages/LoginPage/login.css
+++ b/FRONTEND/src/Pages/LoginPage/login.css
@@ -2,6 +2,7 @@
 .login-form {
   max-width: 400px;
   margin: auto;
+  margin-top: 5rem;
   padding: 20px;
   background-color: #e3e3e3;
   border-radius: 10px;
@@ -38,6 +39,15 @@ input {
   width: 100%;
   padding: 12px;
   padding-left: 35px; /* Space for the icon */
+  margin-top: 5px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+}
+
+select {
+  width: 80%;
+  padding: 5px;
   margin-top: 5px;
   border-radius: 4px;
   border: 1px solid #ccc;
@@ -99,4 +109,11 @@ p {
 
 .forgot-password-link:hover {
   color: #0056b3;
+}
+
+.register{
+  text-align: center;
+}
+.register p{
+  color: black;
 }
