--- a/FRONTEND/src/Pages/StudentDashboard/student-dashboard.css
+++ b/FRONTEND/src/Pages/StudentDashboard/student-dashboard.css
@@ -2,7 +2,7 @@
   display: flex;
   height: 100vh;
 }
-
+/* SLIDER-STYLESS */
 .sidebar {
   width: 250px;
   background-color: #fbfbfc;
@@ -21,7 +21,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  width: 100%; 
+  width: 100%;
 }
 
 .welcome-section {
