--- a/FRONTEND/src/Components/styles/create-issue.css
+++ b/FRONTEND/src/Components/styles/create-issue.css
@@ -1,4 +1,4 @@
-/* Modal Container */
+/* Modals Container */
 .issue-modal {
   background-color: #ffffff; /* White background for the modal */
   border-radius: 10px;
@@ -196,4 +196,3 @@
   color: #999999;
   cursor: not-allowed;
 }
-
