edits in issue table

--- a/FRONTEND/src/Components/styles/create-issue.css
+++ b/FRONTEND/src/Components/styles/create-issue.css
@@ -1,6 +1,6 @@
 /* Modals Container */
 .issue-modal {
-  background-color: #ffffff; /* White bgc for the modal */
+  background-color: #ffffff; /* White bgc for modal */
   border-radius: 10px;
   padding: 30px;
   width: 90%;
