edits in registar-dashb

--- a/FRONTEND/src/Pages/RegistrarDashboard/registrar-dashboard.css
+++ b/FRONTEND/src/Pages/RegistrarDashboard/registrar-dashboard.css
@@ -1,3 +1,4 @@
+/* SPECIFIC STYLES */
 .registrar-dashboard {
   display: flex;
   flex-direction: column;
@@ -360,4 +361,3 @@
     width: 100%;
   }
 }
-
