edits in sdt-dashb

--- a/FRONTEND/src/Pages/LecturerDashboard/lecturer-dashboard.css
+++ b/FRONTEND/src/Pages/LecturerDashboard/lecturer-dashboard.css
@@ -1,9 +1,9 @@
-/* SPECIFIC UI STYLES */
+/* SPECIFIC UI STYLEs*/
 .lecturer-dashboard {
   display: flex;
   flex-direction: column;
   gap: 20px;
-  width: 100%; /* Ensure full-width */
+  width: 100%;
 }
 
 .welcome-section {
