issue-history edits

--- a/FRONTEND/src/Pages/StudentDashboard/student-dashboard.css
+++ b/FRONTEND/src/Pages/StudentDashboard/student-dashboard.css
@@ -260,6 +260,9 @@
   background-color: var(--accent-color);
   color: white;
 }
+.history-item p{
+  color: black;
+}
 
 @media (max-width: 992px) {
   .welcome-section {
