--- a/FRONTEND/src/Pages/StudentDashboard/student-dashboard.css
+++ b/FRONTEND/src/Pages/StudentDashboard/student-dashboard.css
@@ -2,7 +2,7 @@
   display: flex;
   height: 100vh;
 }
-/* SLIDER-STYLES */
+/* SLIDER STYLES */
 .sidebar {
   width: 250px;
   background-color: #fbfbfc;
