--- a/FRONTEND/src/Pages/RegistrarDashboard/registrar-dashboard.css
+++ b/FRONTEND/src/Pages/RegistrarDashboard/registrar-dashboard.css
@@ -77,6 +77,9 @@
   flex-direction: column;
   gap: 20px;
 }
+.welcome-msg {
+  color: black;
+}
 
 .lecturers-section {
   background-color: var(--bg-secondary);
