--- a/FRONTEND/src/Pages/RegistrarDashboard/registrar-dashboard.css
+++ b/FRONTEND/src/Pages/RegistrarDashboard/registrar-dashboard.css
@@ -80,6 +80,9 @@
 .welcome-msg {
   color: black;
 }
+.stat-card p{
+  color: blue;
+}
 
 .lecturers-section {
   background-color: var(--bg-secondary);
